--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ yarn-error.log*
 next-env.d.ts
 
 # End of https://www.toptal.com/developers/gitignore/api/nextjs
+
+# Local Netlify folder
+.netlify
