--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "escape-html": "^1.0.3",
     "moment": "^2.29.4",
     "n": "^9.1.0",
-    "next": "^14.1.1",
+    "next": "15.2.4",
     "prop-types": "^15.8.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
