--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@next/third-parties": "^14.0.4",
+    "@next/third-parties": "15.3.4",
     "@prisma/client": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
@@ -24,7 +24,7 @@
     "escape-html": "^1.0.3",
     "moment": "^2.29.4",
     "n": "^9.1.0",
-    "next": "15.2.4",
+    "next": "15.3.4",
     "prop-types": "^15.8.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
